[gd_scene load_steps=4 format=3 uid="uid://cg8n5yjkk7qe5"]

[ext_resource type="Script" path="res://scripts/towers/digimon_tower.gd" id="1_tower_script"]

[sub_resource type="CircleShape2D" id="CircleShape2D_range"]
radius = 128.0

[sub_resource type="CircleShape2D" id="CircleShape2D_click"]
radius = 28.0

[node name="DigimonTower" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_tower_script")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)

[node name="RangeIndicator" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.3, 0.6, 1, 0.25)
scale = Vector2(4, 4)

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="RangeShape" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_range")

[node name="ClickArea" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_click")

[node name="EffectSpawn" type="Node2D" parent="."]
position = Vector2(0, -16)

[node name="LevelLabel" type="Label" parent="."]
offset_left = -16.0
offset_top = 16.0
offset_right = 16.0
offset_bottom = 32.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="DPIndicator" type="ProgressBar" parent="."]
visible = false
offset_left = -20.0
offset_top = -32.0
offset_right = 20.0
offset_bottom = -24.0
max_value = 10.0
show_percentage = false

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
